--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
           <div class="special-dish">
             <div class="sbox1">
-                <img src="./saanjh/special-dish.jpg" alt="">
+                <img src="./images/special-dish.jpg" alt="">
             </div>
             <div class="sbox2">
                 <div class="sheading">
-                    <img src="./saanjh/bookmark.png" alt="">
+                    <img src="./images/bookmark.png" alt="">
                     <h3>----special-dish----</h3>
                 </div>
                 
@@ -101,7 +101,7 @@
 
           <div class="track-us">
             <div class="food-banner">
-                <img src="./saanjh/food-banner.jpg" alt="">
+                <img src="./images/food-banner.jpg" alt="">
             </div>
 
             <div class="location">
